<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayTxt"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="2dp"
            android:layout_marginTop="8dp"
            tools:ignore="ExtraText">

            <Button
                android:id="@+id/clearBtn"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/clear"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#FFA500"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bracketBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/brackets"
                android:textAppearance="?android:textAppearanceLarge" />

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:background="@drawable/btn_shape"
                android:contentDescription="@string/backspace"
                android:textAppearance="?android:textAppearanceLarge"
                app:srcCompat="@drawable/backspace" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="2dp"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/rootBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/root"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/modulusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/modulus"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/powerBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/power"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/divBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/divide"
                android:textAppearance="?android:textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="2dp"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/seven"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/eight"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/nine"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/mulBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/multiply"
                android:textAppearance="?android:textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/four"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/five"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/six"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/subBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/sub"
                android:textAppearance="?android:textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/one"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/two"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/three"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/addBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/add"
                android:textAppearance="?android:textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">


            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/zero"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/dotBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/dot"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/equalBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:background="@drawable/btn_shape"
                android:backgroundTint="#E1970F"
                android:text="@string/equal"
                android:textAppearance="?android:textAppearanceLarge" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/displayTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="none"
        android:inputType="none"
        android:text=""
        android:lines="2"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultView"
        app:layout_constraintVertical_bias="0.48000002"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="#F8B5AAAA"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/displayTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>